feat: Add build workflow, script, README, and reorganize Typst source files.

--- a/typst.toml
+++ b/typst.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tonguetoquill-classic"
 version = "0.1.0"
-entrypoint = "lib.typ"
+entrypoint = "src/lib.typ"
 authors = ["Nibs"]
 license = "MIT"
 description = "A classic resume template based on the Carnegie Classic specifications."
@@ -9,6 +9,6 @@ description = "A classic resume template based on the Carnegie Classic specifica
 categories = ["office"]
 
 [template]
-path = "main.typ"
-entrypoint = "main.typ"
+path = "template/classic-resume.typ"
+entrypoint = "template/classic-resume.typ"
 thumbnail = "thumbnail.png"
