--- a/typst.toml
+++ b/typst.toml
@@ -21,6 +21,6 @@ categories = ["cv"]
 disciplines = ["business", "computer-science", "engineering", "communication"]
 
 [template]
-path = "template/classic-resume.typ"
-entrypoint = "template/classic-resume.typ"
-thumbnail = "thumbnail.png"
+path = "template"
+entrypoint = "resume.typ"
+thumbnail = "assets/thumbnail.png"
